After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721752 - The positions of the buttons in the headerbar is wrong
The positions of the buttons in the headerbar is wrong
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
3.11.x
Other Mac OS
: Normal normal
: ---
Assigned To: Paolo Bacchilega
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2014-01-07 22:47 UTC by Yosef Or Boczko
Modified: 2014-01-08 09:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: Fix headerbar item positions (1.39 KB, patch)
2014-01-07 22:47 UTC, Yosef Or Boczko
none Details | Review

Description Yosef Or Boczko 2014-01-07 22:47:29 UTC
After the following commit in gtk+, the positions of the buttons
in the headerbar is wrong:
https://git.gnome.org/browse/gtk+/commit/?id=c3e91c70317b337c72282a1aad68fc82a82bf9e9
Comment 1 Yosef Or Boczko 2014-01-07 22:47:54 UTC
Created attachment 265609 [details] [review]
window: Fix headerbar item positions
Comment 2 Paolo Bacchilega 2014-01-08 09:05:08 UTC
Patch pushed to master, thank you.