src/fr-window.c
@@ -5614,10 +5614,6 @@ fr_window_construct (FrWindow *window)
 	gtk_size_group_add_widget (header_bar_size_group, button);
 	gtk_header_bar_pack_start (GTK_HEADER_BAR (window->priv->headerbar), button);
 
-	button = _gtk_header_bar_create_image_toggle_button ("edit-find-symbolic", _("Find files by name"), "win.find");
-	gtk_size_group_add_widget (header_bar_size_group, button);
-	gtk_header_bar_pack_end (GTK_HEADER_BAR (window->priv->headerbar), button);
-
         /* gears menu button */
 
         {
@@ -5637,6 +5633,10 @@ fr_window_construct (FrWindow *window)
 
                 g_object_unref (builder);
         }
+
+	button = _gtk_header_bar_create_image_toggle_button ("edit-find-symbolic", _("Find files by name"), "win.find");
+	gtk_size_group_add_widget (header_bar_size_group, button);
+	gtk_header_bar_pack_end (GTK_HEADER_BAR (window->priv->headerbar), button);
 
         g_object_unref (header_bar_size_group);
 
